Zsteiner layout work (#27)
* Fix layout

* Fix stylelint config

* Fix lint issues

* Update package.json

* Update package.json

* Lint fixes

* Fixes

* Fix package json

* Update netlify.toml

* Update netlify.toml

* Update App.vue

* Update Vue 3

* Refactor icons

* Update icons

* Refactor Vue 3

* Fix logo

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,5 @@
+@use 'sass:color';
+
 $primary: #ff951e;
 $secondary: #007fb2;
 $alert: #fe3d42;
@@ -5,24 +7,24 @@ $warning: #ffca4c;
 $success: #39ea28;
 $default: #3a3b3d;
 $info: #959ea5;
-$black: darken($default, 10%);
-
-$link-hover: darken($secondary, 20%);
-
+$white: #fff;
+$black: color.adjust($default, $lightness: -10%);
+$link-hover: color.adjust($secondary, $lightness: -20%);
 $spacer-unit: 1rem;
-
 $large: 75rem;
 $medium: 45rem;
 $small: 25rem;
-
 $input-padding: 0.75rem 1rem;
 $border-width: 0.0625rem;
 
 @function spacer($value) {
   @if ($value * 4) % 1 != 0 {
     @warn Spacer value must be a multiple of 0.5;
+
     @return Spacer value must be a multiple of 0.5;
-  } @else {
+  }
+
+  @else {
     @return $spacer-unit * $value;
   }
 }
