--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,7 @@ button {
 
 html,
 body {
-  min-height: 100%;
+  min-block-size: 100%;
 }
 
 .no-scroll {
@@ -49,7 +49,7 @@ body {
   z-index: 1;
 }
 
-@media (width >= 45rem) {
+@media (block-size >= 45rem) {
   :root {
     --layout-gap: var(--spacer-double);
   }
