--- a/src/components/TransposeNote/TransposeNote.module.css
+++ b/src/components/TransposeNote/TransposeNote.module.css
@@ -1,5 +1,18 @@
-.container {
-  display: grid;
-  padding-block: var(--spacer);
-  gap: var(--spacer);
+.message {
+  font-size: 0.875rem;
+  text-align: center;
+}
+
+@media (width >= 45rem) {
+  .message {
+    font-size: 1.5rem;
+  }
+}
+
+.accidental {
+  font-size: 0.625em;
+  inset-block-end: 0.25em;
+  inset-inline-start: -0.325em;
+  position: relative;
+  margin-inline-start: 0.25em;
 }
