--- a/src/components/InstrumentSelector/InstrumentPicker.module.css
+++ b/src/components/InstrumentSelector/InstrumentPicker.module.css
@@ -18,7 +18,7 @@
 }
 
 .picker ul {
-  background: rgb(255 255 255 / 95%);
+  background: rgb(255 255 255 / 0.95);
   border-radius: var(--border-radius);
   display: grid;
   grid-template-columns: repeat(4, 1fr);
