--- a/src/components/NotesDisplay/NotesDisplay.module.css
+++ b/src/components/NotesDisplay/NotesDisplay.module.css
@@ -2,5 +2,5 @@
     block-size: 100%;
     display: flex;
     gap: var(--spacer-double);
-    padding: var(--spacer) var(--spacer-double);
+    padding: var(--spacer) 0;
 }
