--- a/src/components/TransposeContainer.module.css
+++ b/src/components/TransposeContainer.module.css
@@ -3,6 +3,13 @@
   max-inline-size: 25rem;
 }
 
+.chordContainer {
+  align-items: end;
+  display: grid;
+  gap: var(--spacer-double);
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+}
+
 .scales {
   margin: auto;
   max-inline-size: 50rem;
