--- a/src/components/Note/Note.module.css
+++ b/src/components/Note/Note.module.css
@@ -1,7 +1,16 @@
 .accidental {
+  block-size: 2ch;
+  display: inline-block;
   font-size: 0.625em;
-  inset-block-end: 0.25em;
-  inset-inline-start: -0.325em;
-  margin-inline-start: 0.125em;
+  line-height: 1.25;
+  overflow: hidden;
   position: relative;
+}
+
+.sharp {
+  margin-inline-start: .0625rem;
+}
+
+.flat {
+  margin-inline-start: -.125rem;
 }
