Fix zero index bug

--- a/src/components/TransposeContainer.module.css
+++ b/src/components/TransposeContainer.module.css
@@ -1,9 +1,9 @@
 .chordContainer {
-  align-items: start;
-  justify-content: center;
+  align-items: flex-start;
   display: flex;
   flex-wrap: wrap;
   gap: var(--spacer-double);
+  justify-content: center;
 }
 
 .chords {
