--- a/src/components/Notation/Notation.module.css
+++ b/src/components/Notation/Notation.module.css
@@ -1,5 +1,5 @@
 .container {
-  align-items: start;
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
