--- a/src/components/InstrumentSelector/InstrumentPicker.module.css
+++ b/src/components/InstrumentSelector/InstrumentPicker.module.css
@@ -1,11 +1,13 @@
 
 .picker {
   --list-border: 0.0625rem solid var(--info);
-  --size: 38rem;
 
   background: none;
+  block-size: 100vh;
   border: 0;
-  padding: 3rem;
+  inset: 0;
+  overflow: hidden;
+  padding: 4rem var(--spacer) var(--spacer);
 }
 
 .picker::backdrop {
@@ -13,17 +15,25 @@
   background: var(--default-transparent);
 }
 
-.picker ul {
+.form {
+  overflow: hidden;
+}
+
+.form, .list {
+  block-size: 100%;
+}
+
+.list {
   background: var(--picker-background);
   border: var(--list-border);
   border-radius: var(--border-radius);
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   list-style: none;
-  margin: 0;
-  overflow: scroll;
+  margin: auto;
+  max-block-size: 35rem;
+  overflow: auto;
   padding: 0;
-  position: relative;
 }
 
 .close {
@@ -31,7 +41,7 @@
   border: 0;
   color: var(--primary);
   font-size: 1.75rem;
-  inset-block-start: 0;
+  inset-block-start: 1rem;
   inset-inline-end: 3rem;
   position: absolute;
   z-index: 1001;
@@ -72,4 +82,8 @@
   &:hover {
     color: var(--secondary);
   }
+}
+
+body:has(.picker[open]) {
+  overflow: hidden;
 }
