--- a/src/components/InstrumentSelector/InstrumentSelector.module.css
+++ b/src/components/InstrumentSelector/InstrumentSelector.module.css
@@ -6,18 +6,18 @@
 
 .button {
   background-color: var(--white);
+  block-size: var(--switch-size);
   border: var(--border-width) solid var(--default-light);
   border-radius: var(--border-radius);
   color: var(--default-light);
   cursor: pointer;
   display: block;
-  height: var(--switch-size);
+  inline-size: 100%;
   line-height: 1;
   padding: 1rem;
   -webkit-tap-highlight-color: transparent;
   text-align: center;
   transition: all 0.1s linear;
-  width: 100%;
 }
 
 .button:focus,
