--- a/src/components/MainNav/MainNav.module.css
+++ b/src/components/MainNav/MainNav.module.css
@@ -14,8 +14,8 @@
 }
 
 .logo {
-  height: var(--logo-height);
-  width: auto;
+  block-size: var(--logo-height);
+  inline-size: auto;
 }
 
 @media (width >= 45rem) {
@@ -32,7 +32,7 @@
 }
 
 .link {
-  border-bottom: 0.25rem solid transparent;
+  border-block-end: 0.25rem solid transparent;
   color: var(--secondary);
   padding: 0.5rem 0;
   text-decoration-line: none;
