--- a/src/components/InstrumentSelector/InstrumentPicker.module.css
+++ b/src/components/InstrumentSelector/InstrumentPicker.module.css
@@ -1,31 +1,52 @@
-.scrim {
-  backdrop-filter: blur(0.25rem);
-  background: var(--default-transparent);
-  display: flex;
-  inset: 0;
-  position: fixed;
-  z-index: 100;
-}
 
 .picker {
   --list-border: 0.0625rem solid var(--info);
-  --size: 38rem;
 
-  border-bottom: var(--list-border);
-  border-radius: var(--border-radius);
-  margin: auto;
-  position: relative;
+  background: none;
+  block-size: 100vh;
+  border: 0;
+  inset: 0;
+  overflow: hidden;
+  padding: 4rem var(--spacer) var(--spacer);
 }
 
-.picker ul {
+.picker[open] {
+  animation: fadein 0.3s linear forwards;
+}
+
+@keyframes fadein{
+  0%{
+    opacity:0;
+  }
+
+  100%{
+    opacity:1;
+  }
+}
+
+.picker::backdrop {
+  backdrop-filter: blur(0.25rem);
+  background: var(--default-transparent);
+}
+
+.form {
+  overflow: hidden;
+}
+
+.form, .list {
+  block-size: 100%;
+}
+
+.list {
   background: var(--picker-background);
+  border: var(--list-border);
   border-radius: var(--border-radius);
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  height: 100%;
   list-style: none;
-  margin: 0;
-  overflow: scroll;
+  margin: auto;
+  max-block-size: 35rem;
+  overflow: auto;
   padding: 0;
 }
 
@@ -34,9 +55,10 @@
   border: 0;
   color: var(--primary);
   font-size: 1.75rem;
+  inset-block-start: 1rem;
+  inset-inline-end: 3rem;
   position: absolute;
-  right: 0;
-  top: -2em;
+  z-index: 1001;
 }
 
 .close:hover,
@@ -45,41 +67,37 @@
   outline: 0;
 }
 
-@media (width >= 45rem) {
-  .picker {
-    border: var(--list-border);
-    max-height: var(--size);
-    max-width: var(--size);
-  }
-}
-
 .item {
-  border-bottom: var(--list-border);
-  border-right: var(--list-border);
-  height: 7rem;
+  block-size: 7rem;
+  border-block-end: var(--list-border);
+  border-inline-end: var(--list-border);
   position: relative;
   text-align: center;
 }
 
 .item:nth-child(4n) {
-  border-bottom: var(--list-border);
-  border-right: 0;
+  border-block-end: var(--list-border);
+  border-inline-end: 0;
 }
 
 .item:nth-last-of-type(-n + 4) {
-  border-bottom: 0;
+  border-block-end: 0;
 }
 
 .button {
   background: none;
+  block-size: 100%;
   border: 0;
   color: var(--default-light);
-  height: 100%;
+  inline-size: 100%;
   padding: 1rem;
   text-align: inherit;
-  width: 100%;
 
   &:hover {
     color: var(--secondary);
   }
+}
+
+body:has(.picker[open]) {
+  overflow: hidden;
 }
