--- a/src/components/InstrumentItem/InstrumentItem.module.css
+++ b/src/components/InstrumentItem/InstrumentItem.module.css
@@ -8,14 +8,14 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  gap: 0.5rem;
+  justify-content: center;
 }
 
 .icon {
   display: inline-block;
   font-size: calc(var(--icon-size) * 0.75);
   line-height: 1;
-  margin-block-end: 0.5rem;
 }
 
 .name {
@@ -39,14 +39,30 @@
   color: var(--white);
 }
 
+@media (width <= 768px) {
+  .stretch {
+    gap: 0.25rem;
+  }
+
+  .icon {
+    font-size: calc(var(--icon-size) * 0.65);
+  }
+
+  .name {
+    font-size: 0.8125rem;
+  }
+
+  .keyIcon {
+    font-size: calc(var(--icon-size) * 0.85);
+  }
+}
+
 @media (width >= 45rem) {
   .icon {
     font-size: var(--icon-size);
-    margin-block-end: 0.5rem;
   }
 
   .keyIcon {
     font-size: var(--icon-size);
-    margin-block-end: 1rem;
   }
 }
