--- a/src/components/InstrumentSelector/InstrumentPicker.module.css
+++ b/src/components/InstrumentSelector/InstrumentPicker.module.css
@@ -11,16 +11,6 @@
   overflow: hidden;
 }
 
-@media (width <= 768px) {
-  .picker {
-    padding: 2.5rem 0.5rem 0.5rem;
-  }
-
-  .form {
-    padding: 0;
-  }
-}
-
 .picker[open] {
   animation: fadein 0.3s linear forwards;
 }
@@ -41,47 +31,29 @@
 }
 
 .form {
-  overflow: hidden;
-  padding: var(--spacer);
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-block-size: 100%;
+  overflow-y: auto;
+  padding: 0.5rem;
 }
 
-.form, .list {
-  block-size: 100%;
-}
-
-.list {
-  background: var(--picker-background);
-  border: var(--list-border);
-  border-radius: var(--border-radius);
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  list-style: none;
-  margin: auto;
-  max-block-size: 35rem;
-  overflow: auto;
-  padding: 0;
-}
-
-@media (width <= 768px) {
-  .list {
-    grid-template-columns: repeat(3, 1fr);
-    inline-size: 100%;
-    margin-inline: 0;
-    max-block-size: calc(100vh - 3rem);
-    max-inline-size: 100%;
-    overflow: hidden auto;
-  }
+.container {
+  display: flex;
+  flex-direction: column;
 }
 
 .close {
+  align-self: flex-end;
   background: none;
   border: 0;
   color: var(--primary);
-  font-size: 1.75rem;
-  inset-block-start: 1rem;
-  inset-inline-end: 3rem;
-  position: absolute;
-  z-index: 1001;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-block-end: 0.125rem;
+  padding: 0.125rem 0.25rem;
 }
 
 .close:hover,
@@ -90,67 +62,78 @@
   outline: 0;
 }
 
-@media (width <= 768px) {
+.list {
+  background: var(--picker-background);
+  border: var(--list-border);
+  border-radius: var(--border-radius);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  inline-size: min(35rem, calc(100vw - 2rem));
+  list-style: none;
+  overflow: hidden;
+  padding: 0;
+}
+
+@media (width >= 45rem) {
+  .form {
+    padding: var(--spacer);
+  }
+
   .close {
     font-size: 1.5rem;
-    inset-block-start: 0.5rem;
-    inset-inline-end: 0.5rem;
-  }
-}
-
-.item {
-  aspect-ratio: 1;
-  border-block-end: var(--list-border);
-  border-inline-end: var(--list-border);
-  inline-size: 100%;
-  position: relative;
-  text-align: center;
-}
-
-.item:nth-child(4n) {
-  border-block-end: var(--list-border);
-  border-inline-end: 0;
-}
-
-.item:nth-last-of-type(-n + 4) {
-  border-block-end: 0;
-}
-
-@media (width <= 768px) {
-  .item:nth-child(4n) {
-    border-inline-end: var(--list-border);
+    padding: 0.5rem 0.75rem;
   }
 
-  .item:nth-child(3n) {
-    border-inline-end: 0;
-  }
-
-  .item:nth-last-of-type(-n + 4) {
-    border-block-end: var(--list-border);
-  }
-
-  .item:nth-last-of-type(-n + 2) {
-    border-block-end: 0;
+  .list {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
 .button {
+  aspect-ratio: 2;
   background: none;
-  block-size: 100%;
   border: 0;
+  border-block-end: var(--list-border);
+  border-inline-end: var(--list-border);
   color: var(--default-light);
+  cursor: pointer;
   inline-size: 100%;
-  padding: 1rem;
-  text-align: inherit;
+  padding: 0.25rem;
+  text-align: center;
 
   &:hover {
     color: var(--secondary);
   }
 }
 
-@media (width <= 768px) {
+.button:nth-child(3n) {
+  border-inline-end: 0;
+}
+
+.button:nth-last-of-type(-n + 2) {
+  border-block-end: 0;
+}
+
+@media (width >= 45rem) {
   .button {
-    padding: 0.375rem;
+    aspect-ratio: 1.5;
+    padding: 1rem;
+  }
+
+  .button:nth-child(3n) {
+    border-inline-end: var(--list-border);
+  }
+
+  .button:nth-child(4n) {
+    border-inline-end: 0;
+  }
+
+  .button:nth-last-of-type(-n + 2) {
+    border-block-end: var(--list-border);
+  }
+
+  .button:nth-last-of-type(-n + 4) {
+    border-block-end: 0;
   }
 }
 
