--- a/src/components/InstrumentItem/InstrumentItem.module.css
+++ b/src/components/InstrumentItem/InstrumentItem.module.css
@@ -1,5 +1,5 @@
 .instrument {
-  --icon-size: 2.5rem;
+  --icon-size: 2rem;
 
   block-size: 100%;
 }
@@ -8,19 +8,19 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.125rem;
   justify-content: center;
 }
 
 .icon {
   display: inline-block;
-  font-size: calc(var(--icon-size) * 0.75);
+  font-size: calc(var(--icon-size) * 0.65);
   line-height: 1;
 }
 
 .name {
   display: block;
-  font-size: 0.875rem;
+  font-size: 0.75rem;
 }
 
 .keyIcon {
@@ -29,40 +29,35 @@
   block-size: 1em;
   border-radius: 50%;
   display: inline-flex;
-  font-size: var(--icon-size);
+  font-size: calc(var(--icon-size) * 0.85);
   inline-size: 1em;
   justify-content: center;
-  padding: 0.5rem;
+  padding: 0.25rem;
 }
 
 .keyIcon .iconInternal {
   color: var(--white);
 }
 
-@media (width <= 768px) {
+@media (width >= 45rem) {
+  .instrument {
+    --icon-size: 2.5rem;
+  }
+
   .stretch {
-    gap: 0.25rem;
+    gap: 0.5rem;
   }
 
   .icon {
-    font-size: calc(var(--icon-size) * 0.65);
+    font-size: var(--icon-size);
   }
 
   .name {
-    font-size: 0.8125rem;
-  }
-
-  .keyIcon {
-    font-size: calc(var(--icon-size) * 0.85);
-  }
-}
-
-@media (width >= 45rem) {
-  .icon {
-    font-size: var(--icon-size);
+    font-size: 0.875rem;
   }
 
   .keyIcon {
     font-size: var(--icon-size);
+    padding: 0.5rem;
   }
 }
