--- a/src/components/PageContainer.module.css
+++ b/src/components/PageContainer.module.css
@@ -4,7 +4,7 @@
   gap: var(--spacer);
   margin: auto;
   max-inline-size: var(--medium);
-  padding-block: var(--spacer);
+  padding-block: var(--spacer-double);
 }
 
 @media (width >= 45rem) {
