--- a/src/components/PageContainer.module.css
+++ b/src/components/PageContainer.module.css
@@ -2,9 +2,10 @@
   block-size: 100%;
   display: grid;
   gap: var(--spacer);
+  inline-size: 100%;
   margin: auto;
   max-inline-size: var(--medium);
-  padding-block: var(--spacer);
+  padding-block: var(--spacer-double);
 }
 
 @media (width >= 45rem) {
