--- a/src/components/InstrumentItem/InstrumentItem.module.css
+++ b/src/components/InstrumentItem/InstrumentItem.module.css
@@ -1,7 +1,12 @@
 .instrument {
   --icon-size: 2rem;
 
+  align-items: center;
   block-size: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacer-half);
+  justify-content: center;
 }
 
 .stretch {
@@ -23,20 +28,25 @@
   font-size: 0.75rem;
 }
 
+.addIcon,
 .keyIcon {
+  --size: 0.875em;
+
   align-items: center;
   background: currentcolor;
-  block-size: 1em;
+  block-size: var(--size);
   border-radius: 50%;
   display: inline-flex;
-  font-size: calc(var(--icon-size) * 0.85);
-  inline-size: 1em;
+  inline-size: var(--size);
   justify-content: center;
-  padding: 0.25rem;
+  margin: 0.125em;
+  padding: 0.25em;
 }
 
+.addIcon .iconInternal,
 .keyIcon .iconInternal {
   color: var(--white);
+  font-size: 0.5em;
 }
 
 @media (width >= 45rem) {
@@ -54,10 +64,5 @@
 
   .name {
     font-size: 0.875rem;
-  }
-
-  .keyIcon {
-    font-size: var(--icon-size);
-    padding: 0.5rem;
   }
 }
