--- a/src/components/InstrumentSelector/InstrumentSelector.module.css
+++ b/src/components/InstrumentSelector/InstrumentSelector.module.css
@@ -18,6 +18,10 @@
   -webkit-tap-highlight-color: transparent;
   text-align: center;
   transition: all 0.1s linear;
+
+  & > * {
+    pointer-events: none;
+  }
 }
 
 .button:focus,
@@ -49,6 +53,8 @@
   gap: var(--switch-gap);
   grid-template-columns: var(--switch-size) min-content var(--switch-size);
   justify-content: center;
+  position: relative;
+  z-index: 1;
 }
 
 .arrow {
